OpenBCI_Radio/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:28:53 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
../test/OpenBCI_Radio_ClassTest.cpp:2:10: fatal error: 'OpenBCI_Radio.h' file not found
#include "OpenBCI_Radio.h"
         ^
1 error generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
16:28:58 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
Finished building: ../test/OpenBCI_Radio_ClassTest.cpp
 
Building file: ../test/main.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/main.d" -MT"test/main.d" -o "test/main.o" "../test/main.cpp"
Finished building: ../test/main.cpp
 
Building file: ../external/gtest/gtest-all.cc
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"external/gtest/gtest-all.d" -MT"external/gtest/gtest-all.o" -o "external/gtest/gtest-all.o" "../external/gtest/gtest-all.cc"
Finished building: ../external/gtest/gtest-all.cc
 
Building target: OpenBCI_Radio_Tests
Invoking: MacOS X C++ Linker
g++ -L/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio -o "OpenBCI_Radio_Tests"  ./test/OpenBCI_Radio_ClassTest.o ./test/main.o  ./external/gtest/gtest-all.o   -lpthread
Finished building target: OpenBCI_Radio_Tests
 
16:29:05 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
make: Nothing to be done for `all'.
16:31:13 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building target: OpenBCI_Radio_Tests
Invoking: MacOS X C++ Linker
g++ -L/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio -o "OpenBCI_Radio_Tests"  ./test/OpenBCI_Radio_ClassTest.o ./test/main.o  ./external/gtest/gtest-all.o   -lpthread
Finished building target: OpenBCI_Radio_Tests
 
16:34:10 **** Clean-only build of configuration Debug for project OpenBCI_Radio_Tests ****
make clean 
rm -rf  ./external/gtest/gtest-all.d  ./test/OpenBCI_Radio_ClassTest.o ./test/main.o  ./external/gtest/gtest-all.o  ./test/OpenBCI_Radio_ClassTest.d ./test/main.d  OpenBCI_Radio_Tests
 
16:34:10 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
Finished building: ../test/OpenBCI_Radio_ClassTest.cpp
 
Building file: ../test/main.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/main.d" -MT"test/main.d" -o "test/main.o" "../test/main.cpp"
Finished building: ../test/main.cpp
 
Building file: ../external/gtest/gtest-all.cc
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"external/gtest/gtest-all.d" -MT"external/gtest/gtest-all.o" -o "external/gtest/gtest-all.o" "../external/gtest/gtest-all.cc"
Finished building: ../external/gtest/gtest-all.cc
 
Building target: OpenBCI_Radio_Tests
Invoking: MacOS X C++ Linker
g++ -L/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio -o "OpenBCI_Radio_Tests"  ./test/OpenBCI_Radio_ClassTest.o ./test/main.o  ./external/gtest/gtest-all.o   -lpthread
Finished building target: OpenBCI_Radio_Tests
 
16:34:22 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
make: Nothing to be done for `all'.
16:34:26 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
../test/OpenBCI_Radio_ClassTest.cpp:2:10: fatal error: 'OpenBCI_Radio.h' file not found
#include "OpenBCI_Radio.h"
         ^
1 error generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
16:37:58 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
In file included from ../test/OpenBCI_Radio_ClassTest.cpp:2:
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:20:10: fatal error: 'WProgram.h' file not found
#include <WProgram.h>
         ^
1 error generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
16:42:40 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
In file included from ../test/OpenBCI_Radio_ClassTest.cpp:2:
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:23:11: fatal error: 'WProgram.h' file not found
        #include <WProgram.h>
                 ^
1 error generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
16:42:46 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
In file included from ../test/OpenBCI_Radio_ClassTest.cpp:2:
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:23:11: fatal error: 'WProgram.h' file not found
        #include <WProgram.h>
                 ^
1 error generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
16:43:24 **** Incremental Build of configuration Debug for project OpenBCI_Radio_Tests ****
make all 
Building file: ../test/OpenBCI_Radio_ClassTest.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/external" -I"/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/OpenBCI_Radio_ClassTest.d" -MT"test/OpenBCI_Radio_ClassTest.o" -o "test/OpenBCI_Radio_ClassTest.o" "../test/OpenBCI_Radio_ClassTest.cpp"
In file included from ../test/OpenBCI_Radio_ClassTest.cpp:2:
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:31:3: error: unknown type name 'boolean'
  boolean begin(uint8_t mode = OPENBCI_MODE_DEVICE,int8_t channelNumber);
  ^
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:41:17: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
  int8_t PGCpin = 5; // This is not used
                ^
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:31:32: error: use of undeclared identifier 'OPENBCI_MODE_DEVICE'
  boolean begin(uint8_t mode = OPENBCI_MODE_DEVICE,int8_t channelNumber);
                               ^
/Users/ajk/BCI/OpenBCI_Radios/OpenBCI_Radio/OpenBCI_Radio_Tests/src/OpenBCI_Radio.h:43:2: error: expected ';' after class
}
 ^
 ;
1 warning and 3 errors generated.
make: *** [test/OpenBCI_Radio_ClassTest.o] Error 1
